--- a/src/shared/header/header.component.scss
+++ b/src/shared/header/header.component.scss
@@ -1,3 +1,18 @@
+header {
+  button {
+    button {
+      a {
+        text-decoration: none;
+        color: white;
+
+        &:hover {
+          color: red;
+        }
+      }
+    }
+  }
+}
+
 .user-info {
   font-size: 2em;
 }
